viewportDims, centers root on screen. prevent overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow:hidden;
+  overflow: -moz-hidden-unscrollable;
 }
 
 code {
